argocd/monitoring/prometheus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: contrasting-org-prometheus
  labels:
    k8s-app: prometheus
    app.kubernetes.io/name: contrasting-org
    app.kubernetes.io/component: prometheus
spec:
  ports:
    # Exposes `http` and `TCP` ports `9090` using the default `ClusterIP` Service type
apiVersion: v1
kind: Service
metadata:
  name: prometheus-main
spec:
  type: NodePort
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    prometheus: main
  sessionAffinity: ClientIP
  selector:
    k8s-app: prometheus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring
  annotations:
    ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/16 # change this range to admin IPs
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: prometheus.contrasting.org
  - http:
      paths:
      - backend:
          serviceName: prometheus-main
          servicePort: 80
        path: /
  tls:
  - hosts:
    - prometheus.contrasting.org
    secretName: contrasting-org
